restyled chatter dropdown and pages

--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -26,7 +26,7 @@
               </div>
               <div class="actions">
                 <div class="btn-group">
-                  <button id="speak" type="submit" class="btn btn-small">Speak</button>
+                  <button id="speak" type="submit" class="btn">Speak</button>
                 </div>
               </div>
             </div>
