--- a/karl/views/static/ux2/css/variables.less
+++ b/karl/views/static/ux2/css/variables.less
@@ -61,6 +61,7 @@
 @green: #46a546;
 @primaryButtonBackground: darken(@sectionBlue, 10%);
 @orange: #f89406;
+@olive: #B3CB9F;
 @zindexDropdown:        1000;
 @zindexPopover:         1010;
 @zindexTooltip:         1020;
