restyled blog comments

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -751,7 +751,7 @@ a.next {
 .blogComment {
     position: relative;
     .css3_border_radius(.5em);
-    background-color: #C8B6A1;
+    background-color: @grayLighter;
     margin-top: 40px;
     margin-bottom: 1em;
     padding: 1em;
@@ -760,7 +760,7 @@ a.next {
     font-size: 0.85em;
     display: block;
     a:hover {
-        color: #8F806F;
+        color: @grayLight;
     }
     .commentManagement {
         font-family: @fancyFont;
@@ -794,7 +794,7 @@ a.next {
         position: absolute;
         top: -30px;
         .css3_border_radius(.2em);
-        background: #8F806F;
+        background: @grayLight;
         padding: 2px;
         width: auto;
         height: 60px;
