--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -271,7 +271,7 @@ a#global-logo {
     width: 100%;
     .photoProfile {
         height: 130px;
-        background-color: #F1EADE;
+        background-color: darken(@grayLighter, 10%);
         padding: 0;
         width: 33%;
         margin: 0 0.5% 0.5% 0;
