--- a/karl/views/static/ux2/css/responsive/320.less
+++ b/karl/views/static/ux2/css/responsive/320.less
@@ -2,6 +2,10 @@
     body {
         font-size: (@baseFontSize - 3)/@baseFontSize*1em;
     }
+    nav.search {
+        padding: 0;
+        width: 100%;
+    }
     div.topNavIconWrapper {
         position: static;
     }
