--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -86,7 +86,7 @@ a#global-logo {
         margin-bottom: 5px;
     }
     .sras-discreet {
-        color: darken(@baseColor2, 10%);
+        color: darken(@grayLighter, 10%);
         font-family: @fancyFont;
         font-size: 0.75em;
     }
