--- a/karl/views/static/ux2/css/elements/navs.less
+++ b/karl/views/static/ux2/css/elements/navs.less
@@ -31,7 +31,7 @@
   // padding-right: 14px;
   padding: 8px 14px;
   margin-bottom: 0;
-  background: darken(@baseColor2, 10%);
+  background: @grayLighter;
   .css3_border_radius(.5em);
 }
 .nav-list > li > a,
@@ -55,9 +55,9 @@
 .nav-list > li > a:hover,
 .nav-list .active > a,
 .nav-list .active > a:hover {
-  color: @bodyBg;
+  color: @grayDark;
   //text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-  background-color: @baseColor1;
+  background-color: darken(@grayLighter, 10%);
 }
 .nav-list [class^="icon-"] {
   margin-right: 2px;
