--- a/karl/ux2/forms/templates/formish/widgets/KarlTagsAdd/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/KarlTagsAdd/widget.html
@@ -8,6 +8,7 @@
                 validateRegexp: "^[a-zA-Z0-9\-\._]+$",
                 name: "${field.name}",
                 partialForm: true,
+                appURL: window.head_data.app_url,
                 autocompleteURL: window.head_data.app_url + '/tag_search.json'
              });
          });
