--- a/karl/ux2/forms/templates/formish/widgets/KarlTagsEdit/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/KarlTagsEdit/widget.html
@@ -8,6 +8,7 @@
                 validateRegexp: "^[a-zA-Z0-9\-\._]+$",
                 name: "${field.name}",
                 partialForm: true,
+                appURL: head_data.app_url,
                 addTagURL: head_data.context_url + 'jquery_tag_add',
                 delTagURL: head_data.context_url + 'jquery_tag_del',
                 autocompleteURL: head_data.app_url + '/tag_search.json'
