--- a/karl/views/static/ux2/css/elements/tagbox.less
+++ b/karl/views/static/ux2/css/elements/tagbox.less
@@ -140,6 +140,7 @@ form.addTag {
         font-size: 1em;
         outline: none;
         border: none;
+        .css3_box_shadow(none);
     }
     input:focus {
         outline: none;
@@ -158,6 +159,7 @@ form.addTag {
         #css3_gradient > .vertical(@grayLighter, darken(@grayLighter, 10%));
         .css3_border_radius(0 .3em .3em 0);
         height: 100%;
+        width: 6em;
     }
 }
 .no-touch {
@@ -173,7 +175,9 @@ form.addTag {
     margin: 5px 0 0 0;
 }
 #newTag {
-    width: 1em;
+    width: 8em;
+    height: 1.75em;
+    margin: 0.3em;
 }
 
 // --
