fixed responsive searchbar

--- a/karl/views/static/ux2/css/responsive/1024.less
+++ b/karl/views/static/ux2/css/responsive/1024.less
@@ -46,6 +46,7 @@
         fieldset {
             margin-top: -1.25em;
             .css3_transition(margin-top .2s linear);
+            width: 225px;
         }
         fieldset.opened {
             margin-top: .2em;
@@ -69,7 +70,7 @@
     }
     form#search-form label {
         color: @white;
-        font-size: 0.75em;
+        font-size: 0.7em;
     }
 
     // SECTION CONTAINER
