--- a/karl/views/static/ux2/css/responsive/768.less
+++ b/karl/views/static/ux2/css/responsive/768.less
@@ -25,7 +25,7 @@
         font-weight: normal;
         font-family: @baseFont;
         margin: 0 0.5em 0 0;
-        color: @grayLight;
+        color: @grayDark;
         position: relative;
         overflow: hidden; /* to not let <select> to 'stretch' longer than it's needed */
         //.smaller();
@@ -36,7 +36,7 @@
         .css3_border_radius(.3em);
         padding-right: 1.9em;
         pointer-events: none;
-        background: #fff;
+        background: @white;
         &:after {
             content: "";
             display: block;
