--- a/karl/views/static/ux2/css/responsive/640.less
+++ b/karl/views/static/ux2/css/responsive/640.less
@@ -158,6 +158,7 @@ form#search-form {
     .css3_border_radius(0);
     font-size: 1em;
     font-family: @baseFont;
+    color: @black;
     background-color: @pushDownBg; /* for IE to prevent overriding with .quickpanel's black background */
 }
 h2#search-toggle:before {
