--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1167,3 +1167,8 @@ small.timeago-date {
 
 }
 
+.bc-livesearch-autocomplete-results {
+    a.email, .bc-livesearch-more {
+        color: @linkColor;
+    }
+}
