--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1175,8 +1175,11 @@ small.timeago-date {
 
 // TEST STYLES FOR APPROVAL
 .test1 {
+    .sectionContainer {
+        .gradientBar(#cfd5da, darken(#cfd5da, 30%));
+    }
     .contentWrapper {
-        background-color: @grayLighter;
+        background-color: #f0f2f4;
         section.main {
             background-color: @white;
             border: 1px solid @grayLight;
