--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1188,3 +1188,53 @@ small.timeago-date {
         }
     }
 }
+
+.test2 {
+    .sectionContainer {
+        .gradientBar(#cfd5da, darken(#cfd5da, 30%));
+    }
+    .contentWrapper {
+        background-color: #f0f2f4;
+        section.main {
+            background-color: @white;
+            border: 1px solid @grayLight;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            #left {
+                h3 {
+                    font-size: 1.333;
+                    margin-top: 0;
+                    text-transform: uppercase;
+                    text-align: center;
+                    padding-bottom: 10px;
+                    border-bottom: @grayLight 1px dashed;
+                }
+            }
+            #center {
+                h3 {
+                    text-align: left;
+                    color: #639332;
+                }
+                a {
+                    color: #3A74A9;
+                }
+                .more {
+                    color: #639332;
+                    text-transform: uppercase;
+                    text-decoration: underline;
+                }
+            }
+            #right {
+                a {
+                    color: #3A74A9;
+                }
+                .more {
+                    color: #639332;
+                    text-transform: uppercase;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+}
+
