--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1202,9 +1202,6 @@ small.timeago-date {
             padding-bottom: 20px;
             #left {
                 h3 {
-                    font-size: 1.333;
-                    margin-top: 0;
-                    text-transform: uppercase;
                     text-align: center;
                     padding-bottom: 10px;
                     border-bottom: @grayLight 1px dashed;
@@ -1222,9 +1219,16 @@ small.timeago-date {
                     color: #639332;
                     text-transform: uppercase;
                     text-decoration: underline;
+                    text-align: left;
+                    border-top: none;
                 }
             }
             #right {
+                h3 {
+                    text-align: center;
+                    padding-bottom: 10px;
+                    border-bottom: @grayLight 1px dashed;
+                }
                 a {
                     color: #3A74A9;
                 }
@@ -1232,6 +1236,8 @@ small.timeago-date {
                     color: #639332;
                     text-transform: uppercase;
                     text-decoration: underline;
+                    text-align: left;
+                    border-top: none;
                 }
             }
         }
