--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1208,36 +1208,44 @@ small.timeago-date {
                 }
             }
             #center {
-                h3 {
-                    text-align: left;
-                    color: #639332;
-                }
-                a {
-                    color: #3A74A9;
-                }
-                .more {
-                    color: #639332;
-                    text-transform: uppercase;
-                    text-decoration: underline;
-                    text-align: left;
-                    border-top: none;
+                .generic-portlet {
+                    h3 {
+                        text-align: left;
+                        color: #639332;
+                    }
+                    a {
+                        color: #3A74A9;
+                    }
+                    .more {
+                        text-transform: uppercase;
+                        text-decoration: underline;
+                        text-align: left;
+                        border-top: none;
+                        a {
+                            color: #639332;
+                        }
+                    }
                 }
             }
             #right {
-                h3 {
-                    text-align: center;
-                    padding-bottom: 10px;
-                    border-bottom: @grayLight 1px dashed;
-                }
-                a {
-                    color: #3A74A9;
-                }
-                .more {
-                    color: #639332;
-                    text-transform: uppercase;
-                    text-decoration: underline;
-                    text-align: left;
-                    border-top: none;
+                .generic-portlet {
+                    h3 {
+                        text-align: center;
+                        padding-bottom: 10px;
+                        border-bottom: @grayLight 1px dashed;
+                    }
+                    a {
+                        color: #3A74A9;
+                    }
+                    .more {
+                        text-transform: uppercase;
+                        text-decoration: underline;
+                        text-align: left;
+                        border-top: none;
+                        a {
+                            color: #639332;
+                        }
+                    }
                 }
             }
         }
