--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1200,50 +1200,52 @@ small.timeago-date {
             border: 1px solid @grayLight;
             padding-top: 20px;
             padding-bottom: 20px;
-            #left {
-                h3 {
-                    text-align: center;
-                    padding-bottom: 10px;
-                    border-bottom: @grayLight 1px dashed;
-                }
-            }
-            #center {
-                .generic-portlet {
-                    h3 {
-                        text-align: left;
-                        color: #639332;
-                    }
-                    a {
-                        color: #3A74A9;
-                    }
-                    .more {
-                        text-transform: uppercase;
-                        text-decoration: underline;
-                        text-align: left;
-                        border-top: none;
-                        a {
-                            color: #639332;
-                        }
-                    }
-                }
-            }
-            #right {
-                .generic-portlet {
+            #main {
+                #left {
                     h3 {
                         text-align: center;
                         padding-bottom: 10px;
                         border-bottom: @grayLight 1px dashed;
                     }
-                    a {
-                        color: #3A74A9;
-                    }
-                    .more {
-                        text-transform: uppercase;
-                        text-decoration: underline;
-                        text-align: left;
-                        border-top: none;
-                        a {
+                }
+                #center {
+                    .generic-portlet {
+                        h3 {
+                            text-align: left;
                             color: #639332;
+                        }
+                        a {
+                            color: #3A74A9;
+                        }
+                        .more {
+                            text-transform: uppercase;
+                            text-decoration: underline;
+                            text-align: left;
+                            border-top: none;
+                            a {
+                                color: #639332;
+                            }
+                        }
+                    }
+                }
+                #right {
+                    .generic-portlet {
+                        h3 {
+                            text-align: center;
+                            padding-bottom: 10px;
+                            border-bottom: @grayLight 1px dashed;
+                        }
+                        a {
+                            color: #3A74A9;
+                        }
+                        .more {
+                            text-transform: uppercase;
+                            text-decoration: underline;
+                            text-align: left;
+                            border-top: none;
+                            a {
+                                color: #639332;
+                            }
                         }
                     }
                 }
