--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1212,6 +1212,11 @@ small.timeago-date {
                     }
                 }
                 #center {
+                    .featureLinks {
+                        a {
+                            color: #639332;
+                        }
+                    }
                     .generic-portlet {
                         h3 {
                             text-align: left;
